# 2022-TUB-MARS-autopilot

./: README.md  mars_robot_interface.ino  motor_interface.ino  ros2node-arduino.c
.devcontainer/: Dockerfile  devcontainer.json
Arduino/Arduino/Ardublock/: Arduino.docx  README.txt
src/: ros2.repos
src/arduino_interface/: README.md  package.xml  setup.cfg  setup.py
src/arduino_interface/Arduino_code/: L298.ino  mars_robot_interface.ino
src/arduino_interface/arduino_interface/: arduino_interface.py
src/autopilot/: CMakeLists.txt  README.md  package.xml
src/autopilot/config/: params.yaml  params_rosbot.yaml
src/autopilot/launch/: autopilot.launch.py  rosbot.launch.py
src/autopilot/models/: rosbot.sdf  rosbot.urdf  rplidar.dae  upper.dae  wheel.dae
src/autopilot/worlds/: my_willowgarage.world
src/covariance_adder/: README.md  package.xml  setup.cfg  setup.py
src/covariance_adder/covariance_adder/: covariance_adder.py
src/jackal_custom/: CMakeLists.txt  package.xml
src/jackal_custom/launch/: robot_state_publisher.launch.py  spawn_robot.launch.py
src/jackal_custom/models/: model.config  model.sdf
src/jackal_custom/urdf/: jackal.urdf
src/mars_robot/: CMakeLists.txt  README.md  package.xml
src/mars_robot/config/: camera.yaml  camera_info_1920x1080.ini  camera_info_640x480.ini  default_view.rviz  diff_drive_controller.yaml  ekf.yaml  nav_view.rviz  params.yaml  robot_view.rviz  slam.yaml  view.rviz
src/mars_robot/launch/: diff_drive_controller.launch.py  diffbot_system.launch.py  ekf.launch.py  gazebo.launch.py  navigation.launch.py  orb_slam2_mono.launch.py  robot_state_publisher.launch.py  spawn_robot.launch.py  system.launch.py
src/mars_robot/urdf/: mars_robot.gazebo  mars_robot.ros2_control.xacro  mars_robot.sdf  mars_robot.urdf  mars_robot.urdf.xacro
src/my_demo_pkg/my_demo_pkg/: move_controller.py
src/speed_passer/: package.xml  setup.cfg  setup.py
src/speed_passer/speed_passer/: publisher_old_school.py  subscriber_old_school.py
