<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">
  <name>mars_robot</name>
  <version>1.0.0</version>
  <description>Package with robot description for MARS rover</description>
  <maintainer email="todo@todo.todo">Simon Kast.</maintainer>
  <maintainer email="todo@todo.todo">Alicia S.</maintainer>
  <license>todo</license>

  <!-- TODO: Here are many dependencies missing that the package actually has... -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
